k8s/kong-ingress/kong-pv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
